        * Updated Todo.remove to allow removing multiple taskids

        * Added Topic.reorder, a new command for reordering the topics in a
        specific manner.

        * Added Http.extension, a new command to retrieve file extension in
        formation from filext.com.

        * Updated Relay.whois to include a user's away status and identified
        state, if the server supports it.

2003-12-6  Jeremy Fincher  <jemfinch@supybot.org>
	
	* Added a "trusted" capability that defaults to off (-trusted) and
	is required for Utilities.re (with which it's possible to DoS the
	bot) and for the new Math.icalc (with which it is trivially
	possible to DoS the bot).
	
	* Added Math.icalc, a new command for doing integer arithmetic.
	It requires the "trusted" capability.
	
	* Added the Fun.ping command, because MozBot has it.
	
	* Added Note.unsend command, to allow users to "unsend" notes
	they've sent but whose recipient has not yet read.
	
	* Added Channel.{deop,devoice,dehalfop,kick}.
	
	* Added Http.size and Http.doctype and Http.headers to retrieve
	various meta-information on URLs.
	
	* Added a ranking to ChannelDB.wordstats.
	
	* Added Karma.most for determining various "mosts" in the Karma
	database.
	
	* Added User.list command to list registered users.
	
	* Added 'roulette' command to Fun plugin.
	
	* Added a Channel.lobotomies command to list the channels in which
	the bot is lobotomized.
	
	* Added a swap function to Math.rpn.

	* Changed the name of User.changeusername to User.changename.
	
	* Changed the logging infrastructure significantly; each plugin
	now has its own logger (and thus logfile), in addition to being
	logged in the main logfile.
	
	* Fixed bug in which the bot wouldn't rejoin channels after a
	reconnect.  Thank the Lord for tcpkill :)
	
	* Fixed Http.freshmeat for projects with a space in their names.
	
	* Changed RSS so RSS feed commands may be added while the bot is
	running, and so added RSS feed commands are in the RSS plugin.
	